2010-04-26  Mark Ellis  <mark@mpellis.org.uk>

	* 0.4 release

2009-12-03  Mark Ellis <mark@mpellis.org.uk>

	* enable building against pre 1.0 gvfs

2009-12-01  Mark Ellis <mark@mpellis.org.uk>

	* daemon/gvfsbackendsynce.c - check for directory in
	  open_for_read(); this was resulting in access denied
	* daemon/gvfsbackendsynce.c - check hostname exists
	  before using it for mount spec
	* log independently of the main gvfs code

2009-11-15  Mark Ellis <mark@mpellis.org.uk>

	* 0.3.1 release for 1.4 gvfs series
	* hack the build system for incompatible changes in gvfs-1.4.x

2009-08-30  Mark Ellis  <mark@mpellis.org.uk>

	* add 22x22 icon, filechooser doesn't scale the 48x48 one

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.3 release

2009-06-03  Mark Ellis <mark@mpellis.org.uk>

	* hack the build system for incompatible changes in gvfs-1.2.x

2009-03-16  Mark Ellis <mark@mpellis.org.uk>

	* configure.ac.in - require librapi2 >= 0.12 for CeFindClose
	* daemon/gvfsbackendsynce.c - fix handling of errors for which a
	  particular G_IO_ERROR is not specified; release mutex on error
	  in synce_gfs_delete(); always use CeFindClose()

2009-02-06  Mark Ellis <mark@mpellis.org.uk>

	* configure.ac.in - added check for libgvfscommon, require
	  glib >= 2.18
	* daemon/Makefile.am - removed ref to libgvfscommon, now in LIBS

2009-01-26  Mark Ellis <mark@mpellis.org.uk>

	* 0.2.2 release
	* configure.ac.in - fixed non-POSIX conditionals properly this time

2009-01-13  Mark Ellis <mark@mpellis.org.uk>

	* 0.2.1 release
	* configure.ac.in - fixed some less portable conditionals

2009-01-10  Mark Ellis <mark@mpellis.org.uk>

	* 0.2 release

2009-01-09  Mark Ellis <mark@mpellis.org.uk>

	* rework the build system, now require appropriate gvfs source
	  files rather than a built tree, make dist can include gvfs
	  files or not, depending on configure options

2009-01-03  Mark Ellis <mark@mpellis.org.uk>

	* daemon/gvfsbackendsynce.c - change wstr_*_current to _utf8
